--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <!-- 基本元数据 -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>程序员个人网站</title>
+    <title>Sanuei个人网站</title>
     
     <!-- 样式表引入 -->
     <link rel="stylesheet" href="css/style.css">
