--- a/projects.html
+++ b/projects.html
@@ -51,13 +51,11 @@
             <!-- 电商平台项目卡片 -->
             <article class="project-card" data-category="web">
                 <div class="project-image">
-                    <!-- 项目封面图 -->
-                    <img src="https://images.unsplash.com/photo-1661956602116-aa6865609028?w=800&auto=format&fit=crop" 
+                    <img src="https://images.unsplash.com/photo-1563013544-824ae1b704d3?w=800&auto=format&fit=crop" 
                          alt="电商平台项目">
-                    <!-- 项目链接 -->
                     <div class="project-links">
-                        <a href="#" class="project-link"><i class="fas fa-external-link-alt"></i></a>
-                        <a href="#" class="project-link"><i class="fab fa-github"></i></a>
+                        <a href="#" class="project-link" rel="noopener"><i class="fas fa-external-link-alt"></i></a>
+                        <a href="#" class="project-link" rel="noopener"><i class="fab fa-github"></i></a>
                     </div>
                 </div>
                 <!-- 项目信息 -->
@@ -75,14 +73,56 @@
 
             <!-- 健康追踪App项目卡片 -->
             <article class="project-card" data-category="mobile">
-                <!-- 项目结构与上面相同 -->
-                <!-- ... -->
+                <div class="project-image">
+                    <img src="https://images.unsplash.com/photo-1576678927484-cc907957088c?w=800&auto=format&fit=crop" 
+                         alt="健康追踪App界面预览">
+                    <div class="project-links">
+                        <a href="https://github.com/yourusername/health-tracker" class="project-link" target="_blank" rel="noopener">
+                            <i class="fab fa-github"></i>
+                        </a>
+                        <a href="https://health-tracker-demo.com" class="project-link" target="_blank" rel="noopener">
+                            <i class="fas fa-external-link-alt"></i>
+                        </a>
+                    </div>
+                </div>
+                <!-- 项目信息 -->
+                <div class="project-info">
+                    <h3>健康追踪App</h3>
+                    <p>一个用于追踪健康数据的移动应用，支持实时数据可视化和健康建议。</p>
+                    <!-- 技术标签 -->
+                    <div class="project-tags">
+                        <span class="tag">React Native</span>
+                        <span class="tag">Node.js</span>
+                        <span class="tag">MongoDB</span>
+                    </div>
+                </div>
             </article>
 
             <!-- 数据可视化项目卡片 -->
             <article class="project-card" data-category="web">
-                <!-- 项目结构与上面相同 -->
-                <!-- ... -->
+                <div class="project-image">
+                    <img src="https://images.unsplash.com/photo-1551288049-bebda4e38f71?w=800&auto=format&fit=crop" 
+                         alt="数据可视化项目预览">
+                    <div class="project-links">
+                        <a href="https://github.com/yourusername/data-visualization" class="project-link" target="_blank" rel="noopener">
+                            <i class="fab fa-github"></i>
+                        </a>
+                        <a href="https://data-viz-demo.com" class="project-link" target="_blank" rel="noopener">
+                            <i class="fas fa-external-link-alt"></i>
+                        </a>
+                    </div>
+                </div>
+                <!-- 项目信息 -->
+                <div class="project-info">
+                    <h3>数据可视化</h3>
+                    <p>一个用于数据可视化的Web应用，支持多种数据源和交互式可视化效果。</p>
+                    <!-- 技术标签 -->
+                    <div class="project-tags">
+                        <span class="tag">React</span>
+                        <span class="tag">Node.js</span>
+                        <span class="tag">MongoDB</span>
+                    </div>
+                </div>
             </article>
         </div>
     </main>
